--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -7,7 +7,7 @@
 
         <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
                 <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Главная</a>
-                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/kino-main">Кино</a>
+                <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/kino_main">Кино</a>
                 <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/about">О нас</a>
         </nav>
     </div>
