--- a/src/main/resources/templates/kino_main.html
+++ b/src/main/resources/templates/kino_main.html
@@ -8,7 +8,11 @@
 <body>
 <header th:insert="blocks/header :: header"></header>
 <div class="container mt-5">
-    <h1 th:text="${title}"/>
+    <h1>Кино главная<h1/>
+        <div th:each="el : ${posts}" class="alert alert-info mt-2"></div>
+        <h3 th:text="${el.title}"/>
+        <p th:text="${el.annons}"/>
+        <a th:href="'/kino_main/' + $(el.id)">Детальнее</a>
 </div>
 
 <div th:insert="blocks/footer :: footer"></div>
