--- a/src/main/resources/templates/kino-details.html
+++ b/src/main/resources/templates/kino-details.html
@@ -7,12 +7,15 @@
 </head>
 <body>
 <header th:insert="blocks/header :: header"></header>
+
 <div class="container mt-5">
-    <h1>Кино главная<h1/>
-        <div th:each="el : ${posts}" class="alert alert-info mt-2"></div>
+    <div th:each="el : ${post}" class="alert alert-info mt-2">
         <h3 th:text="${el.title}"/>
-        <p th:text="${el.annons}"/>
-        <a th:href="'/kino_main/' + $(el.id)">Детальнее</a>
+        <p th:text="${el.full_text}"/>
+        <p><b>Просмотры:</b> <span th:text="${el.views}"/></p>
+        <a th:href="'/kino/' + ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a>
+        <a th:href="'/kino/' + ${el.id} + '/remove'" class="btn btn-warning">Удалить</a>
+    </div>
 </div>
 
 <div th:insert="blocks/footer :: footer"></div>
