--- a/src/main/resources/templates/kino-details.html
+++ b/src/main/resources/templates/kino-details.html
@@ -13,8 +13,10 @@
         <h3 th:text="${el.title}"/>
         <p th:text="${el.full_text}"/>
         <p><b>Просмотры:</b> <span th:text="${el.views}"/></p>
-        <a th:href="'/kino/' + ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a>
-        <a th:href="'/kino/' + ${el.id} + '/remove'" class="btn btn-warning">Удалить</a>
+        <a th:href="'/kino/' + ${el.id} + '/edit'" class="btn btn-warning">Редактировать</a><br><br>
+        <form th:action="'/kino/' + ${el.id} + '/remove'" method="post">
+            <button class="btn btn-warning" type="submit">Удалить</button>
+        </form>
     </div>
 </div>
 
